Fri Mar 16 17:33:08 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_take): allocate buffer array before iteration, as well
	  as enum_first did.

	* enum.c (enum_first): remove duplication.

Fri Mar 16 14:43:18 2012  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* load.c (ruby_init_ext): don't free the given pointer itself.
	  It is not guaranteed even that the pointer is on heap.

Fri Mar 16 14:37:57 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_eval.c (rb_mod_module_eval): fix the documentation of
	  class_eval to mention class variable lookup.  [ruby-core:40649]
	  [Bug #5544]

Fri Mar 16 14:27:11 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_eval.c (rb_mod_module_eval): fix the documentation of
	  class_eval to mention constant lookup.  [ruby-core:41718]
	  [Bug #5777]

Fri Mar 16 14:10:45 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (initialize): raise Net::IMAP::Error when the
	  connection is closed without a greeting response.
	  [ruby-core:40938] [Bug #5616]

Fri Mar 16 13:50:12 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (rfc822_text): ignore [] after RFC822.
	  [ruby-core:40945] [Bug #5620]

Fri Mar 16 12:00:42 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (argument_error): use line number at the beginning
	  of lambda, not the first code of its body.
	  [ruby-core:43314][Bug #6151]

	* iseq.c (rb_iseq_first_lineno): constified.

Fri Mar 16 11:20:07 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator.c (lazy_take): don't enumerate an extra value.
	  [ruby-dev:45370] [Bug #6152]

Fri Mar 16 06:30:10 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (lazy_zip_func): variadic argument needs explicit cast
	  on the platforms where VALUE is longer than int.

	* enumerator.c (lazy_init_iterator): no need to check overflow twice.

Fri Mar 16 05:47:09 2012  Eric Hodel  <drbrain@segment7.net>

	* enumerator.c (lazy_init_iterator):  Fix type error (int vs long).
